fix menu bg z-index

--- a/src/scss/_burger-button.scss
+++ b/src/scss/_burger-button.scss
@@ -6,7 +6,7 @@
   padding: 6px 3px;
   background-color: transparent;
   border: none;
-  z-index: 20;
+  z-index: 200000;
   cursor: pointer;
 
   &.open {
