--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -48,6 +48,7 @@
     }
   }
   &__list {
+    z-index: 100000;
     width: 100%;
     height: 100%;
     background-image: image-set(
